<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/setting">
        
        <EditTextPreference
            android:key="name"
            android:title="@string/name_title"
            android:summary="@string/name_summary"
            android:dialogTitle="@string/name_dialogtitle" />
        
        <ListPreference            
            android:key="list"
            android:title="@string/list_title"
            android:summary="@string/list_summary"
            android:dialogTitle="@string/list_dialogtitle"
            android:entries="@array/list_entries"
            android:entryValues="@array/list_entryvalues" />
        
        <EditTextPreference
            android:key="comment"
            android:title="@string/comment_title"
            android:summary="@string/comment_summary"
            android:dialogTitle="@string/comment_dialogtitle" />
        
        <EditTextPreference
            android:key="interval"
            android:title="@string/interval_title"
            android:summary="@string/interval_summary"
            android:dialogTitle="@string/interval_dialogtitle"
            android:inputType="number"
             />
     
         
        <Preference 
            android:title="マーカー配置"
            android:key="button"
            android:summary="マーカー配置"/>

        
    </PreferenceCategory>
    
</PreferenceScreen>

